--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_app
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_webapp
 spring.datasource.username=root
 spring.datasource.password=sweni
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+
