--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_app
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_website
 spring.datasource.username=root
 spring.datasource.password=sweni
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+project.image= images/
